CmsRemoteShellClient: Added parameter registryHost.